New line caracter visible.

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    white-space: pre-line;
 }
 
 .card-front {
