--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     height: 300px;
     perspective: 1000px;
     margin-bottom: 5px; 
+    margin-top: 10px; 
 }
 
 .card-inner {
@@ -84,6 +85,7 @@ body {
     transform: rotateY(180deg);
 }
 
+.switch-course,
 .next-button {
     width: 300px; 
     height: 50px; 
@@ -97,6 +99,7 @@ body {
     margin-top: 20px; 
 }
 
+.switch-course:hover,
 .next-button:hover {
     background-color: rgb(105, 2, 105); 
 }
