--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     height: 300px;
     perspective: 1000px;
     margin-bottom: 5px; 
-    margin-top: 10px; 
+    margin-top: 5px; 
 }
 
 .card-inner {
@@ -43,6 +43,9 @@ body {
     position: relative;
     transform-style: preserve-3d;
     transition: transform 0.999s;
+    border: 3px solid plum;
+    background-color: purple;
+
 }
 
 .card-inner.flipped {
@@ -64,10 +67,8 @@ body {
 }
 
 .card-front {
-    background-color: purple;
     color: #fff;
     align-items: center;
-    border: 10px solid purple;
     border-radius: 10px;
     justify-content: center;
     font-size: 15px;
@@ -75,44 +76,79 @@ body {
 }
 
 .card-back {
-    background-color: plum;
     color: #fff;
     align-items: center;
-    border: 10px solid plum;
     border-radius: 10px;
     justify-content: center;
     font-size: 15px;
     transform: rotateY(180deg);
 }
 
-.switch-course,
-.next-button {
-    width: 300px; 
-    height: 50px; 
-    background-color: purple;
-    color: white;
-    border: none;
+button, .next-button, .switch-course {
     font-size: 18px;
-    cursor: pointer;
+    font-weight: bold;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    display: inline-block;
+    text-align: center;
+    padding: 0.7em 2em;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
-    margin-top: 20px; 
+    border: 3px solid plum;
+    color: plum;
+    text-decoration: none;
+    cursor: pointer;
+    transition: 0.3s ease all;
+    position: relative;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+  }
+  
+.next-button, .switch-course, .number-button {
+    width: 300px;
+    height: 50px;
+}
+  
+.next-button, .number-button {
+    background-color: purple;
+    margin-top: 20px;
+}
+  
+.switch-course {
+    background-color: purple;
+    margin-bottom: 20px;
+}
+  
+button:before, .next-button:before, .switch-course:before, .number-button:before {
+    transition: 0.5s all ease;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    right: 50%;
+    bottom: 0;
+    opacity: 0;
+    content: '';
+    background-color: plum;
+    z-index: -1;
+}
+  
+button:hover, .next-button:hover, .switch-course:hover, .card:hover {
+    color: white;
+}
+  
+button:hover:before, .next-button:hover:before, .switch-course:hover:before {
+    left: 0;
+    right: 0;
+    opacity: 1;
+}
+  
+button:active, .next-button:active, .switch-course:active {
+    transform: scale(0.9);
+}
+  
+.switch-course:hover, .next-button:hover {
+   background-color: rgb(105, 2, 105);
 }
 
-.switch-course:hover,
-.next-button:hover {
-    background-color: rgb(105, 2, 105); 
-}
 
-.number-button {
-    width: 300px; 
-    height: 50px; 
-    background-color: purple;
-    color: white;
-    border: none;
-    font-size: 18px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    margin-top: 20px; 
-}
+
+
