--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    background-color: rgb(221, 182, 221);
     font-family: Arial, sans-serif;
     overflow: hidden; 
 }
@@ -69,6 +69,7 @@ body {
     border-radius: 10px;
     justify-content: center;
     font-size: 15px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
 .card-front {
